# fsa-to-regex

./: CMakeLists.txt  README.md  main.cpp
examples/: example1.txt  example2.txt  example3.txt
include/: fsa.h  utils.h
src/: fsa.cpp  utils.cpp
